--- a/index.html
+++ b/index.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta charset='utf-8'>
-  <title>Кликабельные дома</title>
-  <meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no'>
-  <link href='https://api.mapbox.com/mapbox-gl-js/v2.6.0/mapbox-gl.css' rel='stylesheet'>
-  <script src='https://api.mapbox.com/mapbox-gl-js/v2.6.0/mapbox-gl.js'></script>
+	<meta charset='utf-8'>
+	<title>Кликабельные дома</title>
+	<meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no'>
+	<link href='https://api.mapbox.com/mapbox-gl-js/v2.6.0/mapbox-gl.css' rel='stylesheet'>
+	<script src='https://api.mapbox.com/mapbox-gl-js/v2.6.0/mapbox-gl.js'></script>
 	<script src='https://unpkg.com/three@0.126.0/build/three.min.js'></script>
 	<script src='https://unpkg.com/three@0.126.0/examples/js/loaders/GLTFLoader.js'></script>
-  <style>
+	<script src="https://unpkg.com/threebox-plugin/dist/threebox.min.js" type="text/javascript"></script>
+	<link href="https://unpkg.com/threebox-plugin/dist/threebox.css" rel="stylesheet"/>
+	<style>
 		body {
 			margin: 0;
 			padding: 0;
@@ -20,7 +22,7 @@
 			bottom: 0;
 			width: 100%;
 		}
-  </style>
+	</style>
 </head>
 <body>
 <div id='map'></div>
